--- a/commandes.html
+++ b/commandes.html
@@ -38,6 +38,14 @@
               Accueil
             </a>
 
+              <a href="./commandes.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-paintbrush"></i>
+                </span>
+                Commandes
+              </a>
+
+
             <a href="./galerie.html" class="navbar-item mx-3">
               <span class="icon">
                 <i class="fa-solid fa-palette"></i>
