--- a/cours-et-stages.html
+++ b/cours-et-stages.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <section class="mlp-section">
+    <section class="mlp-section full-width">
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
@@ -46,42 +46,42 @@
           <div id="navmenu" class="navbar-menu">
             <div class="navbar-start"></div>
             <div class="navbar-end">
-              <a class="navbar-item mx-3" href="index.html">
+              <a class="navbar-item mx-2" href="index.html">
                 <span class="icon">
                   <i class="fas fa-home"></i>
                 </span>
                 Accueil
               </a>
 
-              <a href="./commandes.html" class="navbar-item mx-3">
+              <a href="./commandes.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-paintbrush"></i>
                 </span>
                 Commandes
               </a>
 
-              <a href="./galerie.html" class="navbar-item mx-3">
+              <a href="./galerie.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-palette"></i>
                 </span>
                 Galerie
               </a>
 
-              <a href="./cours-et-stages.html" class="navbar-item mx-3">
+              <a href="./cours-et-stages.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
                 Cours de mosaïque</a
               >
 
-              <a href="./art-therapie.html" class="navbar-item mx-3">
+              <a href="./art-therapie.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-hand-holding-hand"></i>
                 </span>
                 Art thérapie
               </a>
 
-              <a href="index.html#section4" class="navbar-item mx-3">
+              <a href="index.html#section4" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-envelope"></i>
                 </span>
@@ -117,7 +117,10 @@
             </div>
             <div class="column is-flex is-centered my-auto">
               <figure class="image">
-                <img src="Galerie/Cours_atelierTEST.jpg" alt="image-cours-adulte-atelier" />
+                <img
+                  src="Galerie/Cours_atelierTEST.jpg"
+                  alt="image-cours-adulte-atelier"
+                />
               </figure>
             </div>
           </div>
