--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <section class="mlp-section">
+    <section class="mlp-section full-width">
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
@@ -43,42 +43,42 @@
           <div id="navmenu" class="navbar-menu">
             <div class="navbar-start"></div>
             <div class="navbar-end">
-              <a class="navbar-item mx-3" href="index.html">
+              <a class="navbar-item mx-2" href="index.html">
                 <span class="icon">
                   <i class="fas fa-home"></i>
                 </span>
                 Accueil
               </a>
 
-              <a href="./commandes.html" class="navbar-item mx-3">
+              <a href="./commandes.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-paintbrush"></i>
                 </span>
                 Commandes
               </a>
 
-              <a href="./galerie.html" class="navbar-item mx-3">
+              <a href="./galerie.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-palette"></i>
                 </span>
                 Galerie
               </a>
 
-              <a href="./cours-et-stages.html" class="navbar-item mx-3">
+              <a href="./cours-et-stages.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
                 Cours de mosaïque</a
               >
 
-              <a href="./art-therapie.html" class="navbar-item mx-3">
+              <a href="./art-therapie.html" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-hand-holding-hand"></i>
                 </span>
                 Art thérapie
               </a>
 
-              <a href="index.html#section4" class="navbar-item mx-3">
+              <a href="index.html#section4" class="navbar-item mx-2">
                 <span class="icon">
                   <i class="fa-solid fa-envelope"></i>
                 </span>
@@ -133,7 +133,7 @@
               loading="lazy"
             />
           </figure>
-          <div class="block mt-auto">
+          <div class="block">
             <h2 class="is-size-3 has-text-justify subtitle">L'atelier..</h2>
             <p class="mlp-paragraph">
               L’Atelier de St-Gué est un lieu de création, d’échange et de
@@ -165,7 +165,7 @@
               loading="lazy"
             />
           </figure>
-          <div class="block mt-auto">
+          <div class="block">
             <h2 class="is-size-3 has-text-justify subtitle">L'art thérapie</h2>
             <p class="mlp-paragraph">
               Vous pouvez bénéficier à l’Atelier de
@@ -189,7 +189,7 @@
       </div>
     </section>
     <!-- Third section -->
-    <section class="mlp-section section" id="section4">
+    <section class="mlp-section full-width section" id="section4">
       <div class="container is-align-items-center is-flex">
         <div class="columns">
           <div class="column">
